# basic_3D_engine

./: .gitignore  CMakeLists.txt
include/: engine.hpp  mesh.hpp  triangle.hpp  vec3d.hpp
src/: engine.cpp  main.cpp  mesh.cpp
